# locxxate

./: .gitmodules  CMakeLists.txt
btests/: CMakeLists.txt  main.cpp
src/: .CMakeLists.txt.swp  .locxxate.cpp.swp  .locxxate.h.swp  .main.cpp.swp  CMakeLists.txt  db.cpp  db.h  dbiface.hpp  dbsimple_file.cpp  dbsimple_file.h  locxxate.cpp  locxxate.h  log.hpp  main.cpp  string_helpers.h  timer.h
tests/: CMakeLists.txt  dbsimple_tests.cpp  fs_helpers.hpp  locxxate_tests.cpp  main.cpp
tests/test_data/: dev.db
